--- a/gb/21/11/4/n13353726.md
+++ b/gb/21/11/4/n13353726.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zhhqsq3413/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>物尽其用 基市议员张秉钧赠5千支1 cc针筒</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/11/id13353728-525766.jpg" />
 <h6>张秉钧捐赠1 cc针筒给医疗诊所。（张秉钧提供）
 </h6>
 <hr>
-<p>【大纪元2021年11月04日讯】（大纪元记者陈秀媛台湾基隆报导）目前市面上注射COVID-19 <ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>皆使用3cc普通针筒，但接种疫苗每剂0.5cc或0.3cc的剂量，取用时有浪费疫苗的问题产生。基隆市议员张秉钧结合爱心人士捐赠5000支1cc注射针筒给医疗诊所，希望物尽其用并达到资源不浪费的效果。</p>
-<p>台大黄振国诊所医师表示，感谢张秉钧议员的捐赠，大幅提升接种<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>人数，对疫苗接种有显而易见的帮助。今天获赠的1cc针筒，能让医护人员精准抽取出帮民众接种，相对会让施打工作更有效率，也减少残剂发生。</p>
+<p>【大纪元2021年11月04日讯】（大纪元记者陈秀媛台湾基隆报导）目前市面上注射COVID-19 <ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>皆使用3cc普通针筒，但接种疫苗每剂0.5cc或0.3cc的剂量，取用时有浪费疫苗的问题产生。基隆市议员张秉钧结合爱心人士捐赠5000支1cc注射针筒给医疗诊所，希望物尽其用并达到资源不浪费的效果。</p>
+<p>台大黄振国诊所医师表示，感谢张秉钧议员的捐赠，大幅提升接种<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>人数，对疫苗接种有显而易见的帮助。今天获赠的1cc针筒，能让医护人员精准抽取出帮民众接种，相对会让施打工作更有效率，也减少残剂发生。</p>
 <p>张秉钧说，疫情爆发时，为了让接种疫苗人数提高及增加覆盖率，初期采用集中造册并在疫苗施打站接种疫苗；现疫情已趋缓，接种疫苗的工作回归到医疗诊所；为了让施打效率提升并避免疫苗浪费，特准备1c.c.注射针筒给医疗诊所，让更多民众可以接种疫苗。</p>
 <p>张秉钧呼吁，目前国内疫苗覆盖率已达7成以上。但切勿因疫情减缓，而疏忽防疫措施。勤洗手、戴口罩，并鼓励尚未施打疫苗的市民朋友踊跃接种疫苗，才是保护您我的最佳方式。</p>
 <p>责任编辑：吕美琪</p>
@@ -16,41 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/30/n13340834.md#1">台菲马港口历史脉动展 在太平青鸟开幕</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/30/n13340849.md#1">大武崙森林运动公园工作坊 广纳民众意见</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/31/n13342581.md#1">基隆囝仔爱运动  林右昌：玩出健康身心灵</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/31/n13342847.md#1">台县市合并升格 民调：多数民众不支持</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/31/n13343034.md#1">台湾古典诗：基隆屿</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/10/31/n13343056.md#1">东北部短暂阵雨下到3日 气温回暖温差仍大</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/11/1/n13345129.md#1">议员质询汽机车噪音 基市警：加强联合稽查</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/11/2/n13347776.md#1">为查缉河面垃圾源头 基市环保局出动电眼</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/11/2/n13347848.md#1">世华赠36张电动护理床 基市长辈服务再升级</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/11/2/n13347852.md#1">疫苗施打比例本岛第一  林右昌：防疫不松懈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13340834.md#1">台菲马港口历史脉动展 在太平青鸟开幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13340849.md#1">大武崙森林运动公园工作坊 广纳民众意见</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342581.md#1">基隆囝仔爱运动  林右昌：玩出健康身心灵</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342847.md#1">台县市合并升格 民调：多数民众不支持</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13343034.md#1">台湾古典诗：基隆屿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13343056.md#1">东北部短暂阵雨下到3日 气温回暖温差仍大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13345129.md#1">议员质询汽机车噪音 基市警：加强联合稽查</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/2/n13347776.md#1">为查缉河面垃圾源头 基市环保局出动电眼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/2/n13347848.md#1">世华赠36张电动护理床 基市长辈服务再升级</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/2/n13347852.md#1">疫苗施打比例本岛第一  林右昌：防疫不松懈</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/4/n13353726.htm">物尽其用 基市议员张秉钧赠5千支1 cc针筒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/4/n13353726.htm">物尽其用 基市议员张秉钧赠5千支1 cc针筒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zhhqsq3413/djy/blob/master/gb/21/11/4/n13353726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13353726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
